<resources>

    <!--공 통-->
    <string name="app_name">프렌드 내비</string>
    <string name="confirm">확 인</string>
    <string name="add">추 가</string>
    <string name="cancel">취 소</string>
    <string name="search">검 색</string>
    <string name="id">아 이 디</string>
    <string name="pw">비 밀 번 호</string>
    <string name="pwRe">비 밀 번 호 재 입 력</string>
    <string name="nickname">닉 네 임</string>
    <string name="phone">휴 대 폰 번 호</string>
    <string name="addHome">주 소 ( 집 )</string>
    <string name="addCom">주 소 ( 회 사 )</string>
    <string name="btn">버 튼</string>
    <string name="duplicationCheck">중 복 검 사</string>
    <string name="duplicationMessage">중복 검사를 해주세요.</string>

    <!--회 원 가 입-->
    <string name="joinTitle">회원 가입</string>
    <string name="idCheck">영문, 숫자 혼합 6 ~ 16자</string>
    <string name="nicknameCheck">2 ~ 10자</string>
    <string name="passwordCheck">영문, 숫자, 특수문자 혼합 8 ~ 16자</string>
    <string name="passwordReCheck">비밀번호 일치 확인</string>

    <!--로 그 인-->
    <string name="loginTitle">로 그 인</string>
    <string name="autoLogin">자 동 로 그 인</string>
    <string name="findID">아이디 찾기</string>
    <string name="findPW">비밀번호 찾기</string>
    <string name="sns">SNS 로그인</string>
    <string name="naver">N</string>
    <string name="kakao">K</string>
    <string name="google">G</string>

    <!--즐겨찾기-->
    <string name="favoriteTitle">즐 겨 찾 기</string>
    <string name="modify">편 집</string>
    <string name="favoriteHome">집</string>
    <string name="favoriteComp">회 사</string>

    <!--친구-->
    <string name="friendTitle">친 구</string>

    <!--채팅방 목록-->
    <string name="chatListTitle">채 팅</string>

    <!--채팅방-->
    <string name="chatRoomTitle">닉 네 임</string>
    <string name="chat">입 력</string>

    <!--위치확인-->
    <string name="checkLocateTitle">위 치 확 인</string>

    <!--유저 정보-->
    <string name="myInfoTitle">나키 님</string>

    <!--검색 아이템-->
    <string name="searchName">상호명</string>
    <string name="searchAddress">주소</string>

    <!--사용자 정보-->
    <string name="logout">로 그 아 웃</string>
    <string name="withdraw">회 원 탈 퇴</string>

    <!--탐색 옵션-->
    <string name="guide">안내 시작</string>

    <string name="option">옵션</string>
    <string name="duration">소요 시간</string>
    <string name="distance">거리</string>
    <string name="fare">통행료</string>
    <string name="timeOfArrival">도착 시간</string>

    <!--네비게이션-->
    <string name="navDistance">남은 거리</string>
    <string name="navDuration">남은 시간</string>

    <string name="firstCourse">다음 코스</string>
    <string name="secondCourse">다다음 코스</string>
    <string name="firstDistance">다음 거리</string>
    <string name="secondDistance">다다음 거리</string>

    <!--채팅리스트-->
    <string name="timeStamp">시간</string>
    <string name="content">내용</string>
    <string name="roomName">방 이름</string>

    <!--친구 페이지-->
    <string name="findFriend">친 구 찾 기</string>

</resources>