<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".Login">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/loginTitle"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputID"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/inputID"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/id"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/loginTitle"
        app:layout_constraintBottom_toTopOf="@id/inputPW"
        app:layout_constraintLeft_toLeftOf="@id/loginTitle"
        app:layout_constraintRight_toRightOf="@id/loginTitle" />

    <EditText
        android:id="@+id/inputPW"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/inputID"
        app:layout_constraintLeft_toLeftOf="@id/inputID"
        app:layout_constraintRight_toRightOf="@id/inputID" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/loginTitle"
        android:textColor="@color/black"
        android:backgroundTint="@color/theme"
        app:layout_constraintTop_toBottomOf="@id/inputPW"
        app:layout_constraintLeft_toLeftOf="@id/inputPW"
        app:layout_constraintRight_toRightOf="@id/inputPW" />

    <LinearLayout
        android:id="@+id/btnGroup"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintLeft_toLeftOf="@id/btnLogin" >

        <Button
            android:id="@+id/btnJoin"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/joinTitle"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnFindID"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/findID"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnFindPW"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/findPW"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/autoLogin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/autoLogin"
        app:layout_constraintTop_toBottomOf="@id/btnGroup"
        app:layout_constraintLeft_toLeftOf="@id/btnGroup" />

    <TextView
        android:id="@+id/snsLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/sns"
        app:layout_constraintTop_toBottomOf="@id/autoLogin"
        app:layout_constraintLeft_toLeftOf="@id/autoLogin" />

    <LinearLayout
        android:id="@+id/snsGroup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/snsLogin"
        app:layout_constraintLeft_toLeftOf="@id/snsLogin"
        app:layout_constraintRight_toRightOf="@id/snsLogin" >

        <Button
            android:id="@+id/btnNaver"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/naver" />

        <ImageButton
            android:id="@+id/btnKakao"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:src="@drawable/kakaologo"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:text="@string/kakao" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/google" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>