<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/optionItem"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white" >

    <TextView
        android:id="@+id/option"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="left|center"
        android:hint="@string/option"
        android:textSize="18sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:gravity="left|center"
        android:hint="@string/duration"
        android:textSize="15sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:gravity="left|center"
        android:hint="@string/distance"
        android:textSize="15sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/timeArrive"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:gravity="left|center"
        android:hint="@string/timeOfArrival"
        android:textSize="12sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tollFare"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:gravity="left|center"
        android:hint="@string/fare"
        android:textSize="12sp"
        android:textColor="@color/black" />

</LinearLayout>