<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Join">

    <TextView
        android:id="@+id/joinTitle"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/joinTitle"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputID"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/inputID"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/id"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/joinTitle"
        app:layout_constraintLeft_toLeftOf="@id/joinTitle"
        app:layout_constraintRight_toRightOf="@id/joinTitle" />

    <TextView
        android:id="@+id/checkIDView"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:gravity="top"
        android:text="@string/idCheck"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/inputID"
        app:layout_constraintLeft_toLeftOf="@id/inputID"
        app:layout_constraintRight_toRightOf="@id/inputID" />

    <LinearLayout
        android:id="@+id/duplicationCheckID"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/checkIDView"
        app:layout_constraintLeft_toLeftOf="@id/checkIDView"
        app:layout_constraintRight_toRightOf="@id/checkIDView" >

        <Button
            android:id="@+id/btnCheckID"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/duplicationCheck"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/theme" />

        <TextView
            android:id="@+id/duplicationCheckIDView"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="top"
            android:hint="@string/duplicationMessage"
            android:textSize="10sp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/inputNickname"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/nickname"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/duplicationCheckID"
        app:layout_constraintBottom_toTopOf="@id/duplicationCheckNickname"
        app:layout_constraintLeft_toLeftOf="@id/inputID"
        app:layout_constraintRight_toRightOf="@id/inputID" />

    <TextView
        android:id="@+id/checkNicknameView"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:gravity="top"
        android:text="@string/nicknameCheck"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/inputNickname"
        app:layout_constraintLeft_toLeftOf="@id/inputNickname"
        app:layout_constraintRight_toRightOf="@id/inputNickname" />

    <LinearLayout
        android:id="@+id/duplicationCheckNickname"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/checkNicknameView"
        app:layout_constraintLeft_toLeftOf="@id/checkNicknameView"
        app:layout_constraintRight_toRightOf="@id/checkNicknameView" >

        <Button
            android:id="@+id/btnCheckNickname"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/duplicationCheck"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/theme" />

        <TextView
            android:id="@+id/duplicationCheckNicknameView"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="top"
            android:hint="@string/duplicationMessage"
            android:textSize="10sp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/inputPW"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/duplicationCheckNickname"
        app:layout_constraintBottom_toTopOf="@id/checkPasswordView"
        app:layout_constraintLeft_toLeftOf="@id/duplicationCheckNickname"
        app:layout_constraintRight_toRightOf="@id/duplicationCheckNickname" />

    <TextView
        android:id="@+id/checkPasswordView"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:gravity="top"
        android:text="@string/passwordCheck"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/inputPW"
        app:layout_constraintLeft_toLeftOf="@id/inputPW"
        app:layout_constraintRight_toRightOf="@id/inputPW" />

    <EditText
        android:id="@+id/inputPWRe"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/pwRe"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/checkPasswordView"
        app:layout_constraintBottom_toTopOf="@id/checkPasswordReView"
        app:layout_constraintLeft_toLeftOf="@id/checkPasswordView"
        app:layout_constraintRight_toRightOf="@id/checkPasswordView" />

    <TextView
        android:id="@+id/checkPasswordReView"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:gravity="top"
        android:text="@string/passwordReCheck"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/inputPWRe"
        app:layout_constraintLeft_toLeftOf="@id/inputPWRe"
        app:layout_constraintRight_toRightOf="@id/inputPWRe" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/checkPasswordReView"
        app:layout_constraintBottom_toTopOf="@id/inputAddressHome"
        app:layout_constraintLeft_toLeftOf="@id/checkPasswordReView"
        app:layout_constraintRight_toRightOf="@id/checkPasswordReView" />

    <EditText
        android:id="@+id/inputAddressHome"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/addHome"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/inputPhone"
        app:layout_constraintBottom_toTopOf="@id/inputAddressCompany"
        app:layout_constraintLeft_toLeftOf="@id/inputPhone"
        app:layout_constraintRight_toRightOf="@id/inputPhone" />

    <EditText
        android:id="@+id/inputAddressCompany"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/addCom"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/inputAddressHome"
        app:layout_constraintBottom_toTopOf="@id/btnJoin"
        app:layout_constraintLeft_toLeftOf="@id/inputAddressHome"
        app:layout_constraintRight_toRightOf="@id/inputAddressHome" />

    <LinearLayout
        android:id="@+id/btnJoin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/inputAddressCompany"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/inputAddressCompany"
        app:layout_constraintRight_toRightOf="@id/inputAddressCompany" >

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="25dp"
            android:text="@string/confirm"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>