<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:gravity="right|center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:text="@string/findFriend"
        android:textSize="20dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/searchNickname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="left|center"
        android:hint="@string/nickname"
        android:textSize="15dp"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="12dp"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/add"
            android:textSize="12dp"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>