<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <ImageButton
        android:id="@+id/profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profile"
        android:scaleType="fitCenter"
        android:background="@color/white"
        android:contentDescription="@string/btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/myInfoTitle"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:text="@string/myInfoTitle"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="15dp"
        android:text="차 량 정 보"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/theme"
        android:text="@string/logout"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnWithdraw"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="#FFFF0000"
        android:text="@string/withdraw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>