<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/profileView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/profile"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/roomNameView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="left|center"
            android:hint="@string/roomName"
            android:textSize="20dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="left|center"
            android:hint="@string/content"
            android:textSize="15dp"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/timeStampView"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:gravity="right|center"
        android:hint="@string/timeStamp"
        android:textSize="10dp"
        android:textColor="@color/black" />

</LinearLayout>