<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Navigation">

    <com.naver.maps.map.MapView
        android:id="@+id/naverMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" >

        <ImageButton
            android:id="@+id/btnReset"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/reset" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@color/black" />

        <TextView
            android:id="@+id/viewDistance"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/navDistance"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/viewDuration"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/navDuration"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@color/black" />

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/list" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnCurrentPoint"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/blue"
        android:scaleType="fitCenter"
        android:src="@drawable/currentpoint"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/statusBar"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:id="@+id/firstCourse"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@color/sign"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" >

        <TextView
            android:id="@+id/viewFirstCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/firstCourse"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/viewFirstDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/firstDistance"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondCourse"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/sign"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/firstCourse"
        app:layout_constraintLeft_toLeftOf="parent" >

        <TextView
            android:id="@+id/viewSecondCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/secondCourse"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/viewSecondDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/secondDistance"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>