<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/white"
    tools:context=".ChatRoom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/backbutton"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:contentDescription="@string/btn" />

        <TextView
            android:id="@+id/chatRoomTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/roomName"
            android:textSize="25sp"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/btnOption"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/list"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:contentDescription="@string/btn" />

    </LinearLayout>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/chattingView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"/>-->

    <TextView
        android:id="@+id/chattingView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/chatWidget"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnLocate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/locate"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:contentDescription="@string/btn" />

        <EditText
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/chat"
            android:textColor="@color/black"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/send"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:contentDescription="@string/btn" />

    </LinearLayout>

</LinearLayout>